--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Tic Tac Toe</title>
 </head>
 <body>
+<div class="container">
 
+    <div class="playground">
+        <div class="playbox"></div>
+        <div class="playbox"></div>
+        <div class="playbox"></div>
+        <div class="playbox"></div>
+        <div class="playbox"></div>
+        <div class="playbox"></div>
+        <div class="playbox"></div>
+        <div class="playbox"></div>
+        <div class="playbox"></div>
+    </div>
+
+</div>
 </body>
 </html>
