--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
 <div class="container">
 
     <div class="playground">
+     <div class="playground_row">
         <div class="playbox"></div>
         <div class="playbox"></div>
         <div class="playbox"></div>
+     </div>
+    <div class="playground_row">
         <div class="playbox"></div>
         <div class="playbox"></div>
         <div class="playbox"></div>
+    </div>
+    <div class="playground_row">
         <div class="playbox"></div>
         <div class="playbox"></div>
         <div class="playbox"></div>
+    </div>
     </div>
 
 </div>
