--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="/index.js"></script>
     <title>Tic Tac Toe</title>
 </head>
 <body>
@@ -11,19 +12,19 @@
 
     <div class="playground">
      <div class="playground_row">
-        <div class="playbox"></div>
-        <div class="playbox"></div>
-        <div class="playbox"></div>
+        <div id="pb" class="playbox"></div>
+        <div id="pb" class="playbox"></div>
+        <div id="pb" class="playbox"></div>
      </div>
     <div class="playground_row">
-        <div class="playbox"></div>
-        <div class="playbox"></div>
-        <div class="playbox"></div>
+        <div id="pb" class="playbox"></div>
+        <div id="pb" class="playbox"></div>
+        <div id="pb" class="playbox"></div>
     </div>
     <div class="playground_row">
-        <div class="playbox"></div>
-        <div class="playbox"></div>
-        <div class="playbox"></div>
+        <div id="pb" class="playbox"></div>
+        <div id="pb" class="playbox"></div>
+        <div id="pb" class="playbox"></div>
     </div>
     </div>
 
