starting with js

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
     <div class="playground">
      <div class="playground_row">
-        <div id="pb" class="playbox"></div>
-        <div id="pb" class="playbox"></div>
-        <div id="pb" class="playbox"></div>
+        <div  class="playbox"></div>
+        <div  class="playbox"></div>
+        <div  class="playbox"></div>
      </div>
     <div class="playground_row">
-        <div id="pb" class="playbox"></div>
-        <div id="pb" class="playbox"></div>
-        <div id="pb" class="playbox"></div>
+        <div  class="playbox"></div>
+        <div  class="playbox"></div>
+        <div  class="playbox"></div>
     </div>
     <div class="playground_row">
-        <div id="pb" class="playbox"></div>
-        <div id="pb" class="playbox"></div>
-        <div id="pb" class="playbox"></div>
+        <div  class="playbox"></div>
+        <div  class="playbox"></div>
+        <div  class="playbox"></div>
     </div>
     </div>
 
